<resources>
    <string name="app_name">KanBase</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>


    <string name="insira_as_credenciais">Insira as credenciais</string>
    <string name="calendar_selecione_a_data">Selecione a data</string>
    <string name="calendar_selecione_o_horario">Selecione o horário</string>
    <string name="edit_sucesso_add_save">Sucesso ao %1$s</string>
    <string name="edit_erro_add_save">Erro ao %1$s</string>
    <string name="prioridade_urgente">Urgente</string>
    <string name="prioridade_importante">Importante</string>
    <string name="prioridade_media">Prioridade média</string>
    <string name="prioridade_baixa">Prioridade baixa</string>
    <string name="prioridade_nenhuma">Nenhuma prioridade</string>
    <string name="toast_tag_criada">Tag criada</string>
    <string name="toast_erro_ao_criar_tag">Erro ao criar tag!</string>
    <string name="action_editar">Editar</string>
    <string name="action_deletar">Deletar</string>
    <string name="item_prazo">"Prazo: "</string>
    <string name="item_tarefa_vencendo_hoje">Vencendo hoje!</string>
    <string name="item_tarefa_completa">Tarefa completa :)</string>
    <string name="perfil_alteraces_salvas">Alterações salvas</string>
    <string name="toast_verifique_sua_senha">Verifique sua senha</string>
    <string name="toast_conta_deletada">Conta deletada</string>
    <string name="erro_2p">"Erro: "</string>
    <string name="sucesso_ao_cadastrar_usuario">Sucesso ao cadastrar usuário</string>
    <string name="sucesso_ao_logar">Sucesso ao logar</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">Descrição</string>
    <string name="adicionar_informacoes">Adicionar informações</string>
    <string name="informacoes_da_conta">Informações da conta</string>
    <string name="deslogar">Deslogar</string>
    <string name="excluir_conta">Excluir conta</string>
    <string name="conta">Conta</string>
    <string name="notificacoes">Notificações</string>
    <string name="idioma">Idioma</string>
    <string name="tema">Tema</string>
    <string name="geral">Geral</string>
    <string name="filtre_os_itens_2p">Filtre os itens:</string>
    <string name="estado">Estado</string>
    <string name="not_started">Não iniciada</string>
    <string name="started">Iniciada</string>
    <string name="finished">Finalizada</string>
    <string name="exibir_tarefas_sem_tags">Exibir tarefas sem tags</string>
    <string name="selecionar_campos">Selecionar campos</string>
    <string name="limite">Limite</string>
    <string name="inicio">Início</string>
    <string name="prioridade">Prioridade</string>
    <string name="tags">Tags</string>
    <string name="qual_a_prioridade_da_tarefa">Qual a prioridade da tarefa?</string>
    <string name="sem_prioridade">Sem prioridade</string>
    <string name="criar_tag">Criar tag</string>
    <string name="selecione_as_tags_2p">Selecione as tags:</string>
    <string name="nome_da_tag">Nome da tag</string>
    <string name="salvar_tag">Salvar tag</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="senha">Senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="ja_tem_conta_pe">Já tem conta?</string>
    <string name="logar">Logar</string>
    <string name="ainda_nao_tem_conta_pe">Ainda não tem conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="filtrar">Filtrar</string>
    <string name="home">Home</string>
    <string name="configuracoes">Configurações</string>
    <string name="sobre_o_app">Sobre o app</string>
    <string name="novas">Novas</string>
    <string name="andamento">Andamento</string>
    <string name="feitas">Feitas</string>
    <string name="criadas_primeiro">Criadas primeiro</string>
    <string name="criadas_por_ultimo">Criadas por último</string>
    <string name="mais_importantes">Mais importantes</string>
    <string name="menos_importantes">Menos importantes</string>
    <string name="classificar">Classificar</string>
    <string name="perfil">Perfil</string>
    <string name="tarefa_atrazada">Tarefa atrazada!</string>
    <string name="boa_noite">Boa noite</string>
    <string name="boa_tarde">Boa tarde</string>
    <string name="bom_dia">Bom dia</string>
    <string name="v_voce_tem_2p">, você tem:</string>
    <string name="sp_tarefa_atrazada">" tarefa atrazada"</string>
    <string name="sp_tarefas_atrazadas">" tarefas atrazadas"</string>
    <string name="sp_tarefa_vencendo">" tarefa vencendo"</string>
    <string name="sp_tarefas_vencendo">" tarefas vencendo"</string>
    <string name="vencendo_hoje">Vencendo hoje</string>
    <string name="a_tarefa_x_ira_expirar_em_x_minutos">A tarefa \"%1$s\" irá expirar em %2$d minutos!</string>
    <string name="a_tarefa_x_ira_expirar_em_1_hora">A tarefa \"%1$s\" irá expirar em uma hora!</string>
    <string name="a_tarefa_x_deve_ser_iniciada_em_x_minutos">A tarefa \"%1$s\" deve ser iniciada em %2$d minutos</string>
    <string name="a_tarefa_x_deve_ser_iniciada_em_1_hora">A tarefa \"%1$s\" deve ser iniciada em uma hora</string>
    <string name="notificar_x_min_antes">Notificar %1$d minutos antes</string>
    <string name="desativar_notificacoes">Desativar notificações</string>
    <string name="_5min_antes">5 mins antes</string>
    <string name="_15min_antes">15 mins antes</string>
    <string name="_30min_antes">30 mins antes</string>
    <string name="_1hr_antes">1 hora antes</string>
    <string name="quanto_tempo_antes_voc_quer_ser_notificado">Quanto tempo antes você quer ser notificado?</string>
    <string name="notificacoes_desativadas">Notificações desativadas</string>
    <string name="x_mins_antes">%1$d mins antes</string>
    <string name="remover_tag_q">Remover tag?</string>
    <string name="deseja_realmente_remover_a_tag_x_q">Deseja realmente remover a tag \"%1$s\"?</string>
    <string name="manter">Manter</string>
    <string name="remover">Remover</string>
    <string name="tag_removida">Tag removida</string>
    <string name="erro_ao_remover_tag">Erro ao remover tag</string>
    <string name="notificacao_previa_padrao">Notificação prévia padrão</string>
    <string name="resumo_diario">Resumo diário</string>
    <string name="resetar_conta">Resetar conta</string>
    <string name="sobre">Sobre</string>
    <string name="avaliar_o_app">Avaliar o app</string>
    <string name="voc_n_o_tem_tarefas_atrazadas_ou_vencendo_descanse_um_pouco">Você não tem tarefas atrazadas ou vencendo, descanse um pouco</string>
    <string name="portugues_brasil">Português (Brasil)</string>
    <string name="english">English</string>
    <string name="cancelar">Cancelar</string>
    <string name="padrao_do_sistema">Padrão do sistema</string>
    <string name="claro">Claro</string>
    <string name="escuro">Escuro</string>
    <string name="hoje">Hoje</string>
    <string name="amanha">Amanhã</string>
    <string name="ontem">Ontem</string>
    <string name="adicione_tags">Adicione tags</string>
    <string name="nenhuma_prioridade">Nenhuma Prioridade</string>
    <string name="voce_pode_adicionar_ou_remover_os_campos">Você pode adicionar ou remover os campos:</string>
    <string name="voce_tem_2p">"Você tem: "</string>
    <string name="sp_e_sp">" e "</string>
    <string name="hoje_voce_nao_tem_tarefas_vencendo_ou_atrazadas">Hoje, você não tem tarefas vencendo ou atrazadas</string>
    <string name="excluir">Excluir</string>
    <string name="voce_quer_realmente_excluir_todas_as_tarefas_q">Você quer realmente excluir todas as tarefas?</string>
    <string name="excluir_tarefas">Excluir tarefas</string>
    <string name="limpar_tarefas">Limpar tarefas</string>
    <string name="ativar_resumo_diario">Ativar resumo diário</string>
    <string name="horario_do_lembrete_2p">Horário do lembrete:</string>
    <string name="enviar_mesmo_sem_avisos_q">Enviar mesmo sem avisos?</string>
    <string name="iniciar_sessao">Iniciar sessão</string>
    <string name="fazer_login_com_google">Fazer login com Google</string>
    <string name="crie_uma_conta_para_manter_suas_tarefas_seguras">Crie uma conta para manter suas tarefas seguras</string>
    <string name="faca_login_para_salvar_suas_tarefas">Faça login para salvar suas tarefas</string>
    <string name="ou">ou</string>
    <string name="faca_o_cadastro_para_salvar_suas_tarefas">Faça o cadastro para salvar suas tarefas</string>
    <string name="dados_da_conta">Dados da conta</string>
    <string name="para_excluir_sua_conta_voce_precisa_relogar_nela_lembrando_que_essa_acao_nao_pode_ser_desfeita">Para excluir sua conta você precisa relogar nela, lembrando que essa ação não pode ser desfeita!</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="politica_de_privacidade">Política de privacidade</string>
    <string name="a_tarefa_x_ja_deveria_ter_sido_iniciada">A tarefa \"%1$s\" já deveria ter sido iniciada!</string>
    <string name="a_tarefa_x_expirou">A tarefa \"%1$s\" expirou!!</string>
    <string name="notificacao_ligada_mas_permissao_negada">Você ativou a notificação da tarefa, mas negou a permissão de notificação.\n\nDessa maneira não será possível enviar um alerta.</string>
    <string name="atencao_">Atenção!</string>
    <string name="entendo">Entendo</string>
    <string name="a_tag_ja_existe">A tag já existe</string>
    <string name="insira_o_nome_da_tag">Insira o nome da tag</string>
    <string name="insira_o_nome_da_sua_tarefa">Insira o nome da tarefa</string>
    <string name="por_favor_aguarde">Por favor, aguarde</string>
    <string name="a_fazer">A fazer</string>
    <string name="fazendo">Fazendo</string>
    <string name="adicione_uma_nova_tarefa_clicando_em_plus">Adicione uma nova tarefa clicando em +</string>
    <string name="para_alterar_o_estado_de_a_fazer_para_fazendo_basta_deslizar_para_o_lado">Para alterar o estado de \'A fazer\' para \'Fazendo\' basta deslizar para o lado</string>
    <string name="sem_a_permissao_de_notificacao_nao_sera_possivel_lhe_enviar_alertas_quando_suas_tarefas_estiverem_vencendo_gostaria_de_rever_sua_escolha">Sem a permissão de notificação não será possível lhe enviar alertas quando suas tarefas estiverem vencendo.\n\nGostaria de rever sua escolha?</string>
    <string name="permissao_negada">Permissão negada!</string>
    <string name="dar_permissao">Dar permissão</string>
    <string name="negar">Negar</string>
</resources>