<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/item_naoIniciado"
        android:enabled="true"
        android:icon="@drawable/icon_lightbulb"
        android:title="@string/novas"
        android:checkable="true"/>
    <item
        android:id="@+id/item_iniciado"
        android:enabled="true"
        android:icon="@drawable/icon_build"
        android:title="@string/andamento"
        android:checkable="true"/>
    <item
        android:id="@+id/item_feitas"
        android:enabled="true"
        android:icon="@drawable/icon_check"
        android:title="@string/feitas"
        android:checkable="true"/>
</menu>