<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.bottomsheet.BottomSheetDragHandleView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/qual_a_prioridade_da_tarefa"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:textColor="@color/red"
        android:paddingLeft="4dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/baseline_priority_high_24"
        android:button="@null"
        android:layout_margin="8dp"
        style="@style/Base.Theme.CHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prioridade_urgente" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:textColor="@color/orangeRed"
        android:button="@null"
        android:paddingLeft="4dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/baseline_priority_high_24"
        android:layout_margin="8dp"
        style="@style/Base.Theme.CHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prioridade_importante" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:textColor="@color/yellow"
        android:button="@null"
        android:paddingLeft="4dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/baseline_priority_high_24"
        android:layout_margin="8dp"
        style="@style/Base.Theme.CHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prioridade_media" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:textColor="@color/green"
        android:button="@null"
        android:paddingLeft="4dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/baseline_priority_high_24"
        android:layout_margin="8dp"
        style="@style/Base.Theme.CHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prioridade_baixa" />
    <CheckBox
        android:id="@+id/checkBox4"
        android:button="@null"
        android:paddingLeft="4dp"
        android:drawablePadding="4dp"
        android:drawableLeft="@drawable/baseline_clear_24"
        android:layout_margin="8dp"
        style="@style/Base.Theme.CHECKBOX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sem_prioridade" />




</LinearLayout>