<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.bottomsheet.BottomSheetDragHandleView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Você pode adicionar ou remover os campos:"
        android:textSize="20dp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/inicio"
            app:chipIcon="@drawable/baseline_today_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/limite"
            app:chipIcon="@drawable/baseline_calendar_month_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/notificacoes"
            app:chipIcon="@drawable/baseline_notifications_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/prioridade"
            app:chipIcon="@drawable/baseline_priority_high_24" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/tags"
            app:chipIcon="@drawable/baseline_label_24" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/modal_sheet_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        android:text="@string/selecionar_campos"
        android:textColor="@color/white" />


</LinearLayout>